// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListRow renders  a row with index and item and delete button 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      sm={6}
      xs={5}
    >
      <WithStyles(Typography)
        variant="body2"
      >
        one
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className="center"
      item={true}
      sm={5}
      xs={5}
    >
      <WithStyles(Grid)
        container={true}
        justify="flex-end"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(Tooltip)
        title="Remove this item"
      >
        <WithStyles(IconButton)
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <pure(DeleteIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ListRow renders  a row with index and item set, renders reorder buttons, and delete button 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      sm={6}
      xs={5}
    >
      <WithStyles(Typography)
        variant="body2"
      >
        one
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className="center"
      item={true}
      sm={5}
      xs={5}
    >
      <WithStyles(Grid)
        container={true}
        justify="flex-end"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Tooltip)
            title="Move item up the order"
          >
            <WithStyles(IconButton)
              disabled={false}
              onClick={[Function]}
            >
              <pure(KeyboardArrowUpIcon) />
            </WithStyles(IconButton)>
          </WithStyles(Tooltip)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Tooltip)
            title="Move item down the order"
          >
            <WithStyles(IconButton)
              disabled={false}
              onClick={[Function]}
            >
              <pure(KeyboardArrowDownIcon) />
            </WithStyles(IconButton)>
          </WithStyles(Tooltip)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(Tooltip)
        title="Remove this item"
      >
        <WithStyles(IconButton)
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <pure(DeleteIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ListRow renders  should delete row on confirmation 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      sm={11}
      xs={10}
    >
      <WithStyles(Typography)
        variant="body2"
      >
        one
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(Tooltip)
        title="Remove this item"
      >
        <WithStyles(IconButton)
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <pure(DeleteIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ListRow renders  should move row down 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      sm={6}
      xs={5}
    >
      <WithStyles(Typography)
        variant="body2"
      >
        one
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className="center"
      item={true}
      sm={5}
      xs={5}
    >
      <WithStyles(Grid)
        container={true}
        justify="flex-end"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Tooltip)
            title="Move item down the order"
          >
            <WithStyles(IconButton)
              disabled={false}
              onClick={[Function]}
            >
              <pure(KeyboardArrowDownIcon) />
            </WithStyles(IconButton)>
          </WithStyles(Tooltip)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(Tooltip)
        title="Remove this item"
      >
        <WithStyles(IconButton)
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <pure(DeleteIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ListRow renders  should move row up 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      sm={6}
      xs={5}
    >
      <WithStyles(Typography)
        variant="body2"
      >
        one
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className="center"
      item={true}
      sm={5}
      xs={5}
    >
      <WithStyles(Grid)
        container={true}
        justify="flex-end"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Tooltip)
            title="Move item up the order"
          >
            <WithStyles(IconButton)
              disabled={false}
              onClick={[Function]}
            >
              <pure(KeyboardArrowUpIcon) />
            </WithStyles(IconButton)>
          </WithStyles(Tooltip)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(Tooltip)
        title="Remove this item"
      >
        <WithStyles(IconButton)
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <pure(DeleteIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ListRow renders  should render default view with styles 1`] = `
<ListRow
  classes={
    Object {
      "center": "ListRow-center-1",
      "row": "ListRow-row-2",
    }
  }
  form="Form"
  index={0}
  item="one"
  locale={
    Object {
      "deleteHint": "Remove this item",
      "deleteRecordConfirmation": Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      },
      "moveDownHint": "Move item down the order",
      "moveUpHint": "Move item up the order",
    }
  }
/>
`;
